--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,7 +29,7 @@ const { title, meta_title, description, image, noindex, canonical } =
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
@@ -53,9 +53,7 @@ const { title, meta_title, description, image, noindex, canonical } =
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href={`https://fonts.googleapis.com/css2?family=${pf}${
-        sf ? "&family=" + sf : ""
-      }&display=swap`}
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap&subset=japanese"
       rel="preload"
       as="style"
       onload="this.rel='stylesheet'"
