--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -53,7 +53,9 @@ const { title, meta_title, description, image, noindex, canonical } =
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap&subset=japanese"
+      href={`https://fonts.googleapis.com/css2?family=${pf}${
+        sf ? "&family=" + sf : ""
+      }&display=swap`}
       rel="preload"
       as="style"
       onload="this.rel='stylesheet'"
